@@ -4,3 +4,17 @@
 
 COM_CLM_EXT="CLM Extern Komponente"
 COM_CLM_EXTERN="ChessLeagueManager Extern"
+
+COM_CLM_EXT_DATA_VIEW_DEFAULT_TITLE="Daten einer externen Liga"
+COM_CLM_EXT_DATA_VIEW_DEFAULT_DESC="Rangliste, Tabelle oder Paarungsliste"
+COM_CLM_EXT_SOURCE="Datenquelle"
+COM_CLM_EXT_SOURCE_DESC=""
+COM_CLM_EXT_SEASON="Saison-Id"
+COM_CLM_EXT_SEASON_DESC=""
+COM_CLM_EXT_LEAGUE="Liga-Id"
+COM_CLM_EXT_LEAGUE_DESC=""
+COM_CLM_EXT_VIEW="View"
+COM_CLM_EXT_VIEW_DESC=""
+COM_CLM_EXT_VIEW_RANGLISTE="Rangliste"
+COM_CLM_EXT_VIEW_TABELLE="Tabelle"
+COM_CLM_EXT_VIEW_PAARUNGSLISTE="Paarungsliste"
